--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,10 +18,10 @@
 
 
     <application
-        android:label="anpr_test"
+        android:label="Cass ANPR"
         android:name="${applicationName}"
         android:hardwareAccelerated="true"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
